--- a/src/Upload.css
+++ b/src/Upload.css
@@ -9,7 +9,8 @@ body {
   max-width: 600px;
   margin: auto;
   text-align: center;
-  background-color: #fff;
+  background-color: #333; /* Sidebar background color */
+  color: white; /* Sidebar text color */
   padding: 20px;
   margin-top: 50px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
